--- a/hoggax pagina 8/index.html
+++ b/hoggax pagina 8/index.html
@@ -11,24 +11,102 @@
 
 <body>
     <header>
-
         <nav>
-            <img class="navBar" src="../imagenes/navBar.png" alt="">
+            <div class="contenedorImagen ">
+                <img class="navBar" src="../imagenes/navBar.png" alt="">
+            </div>
         </nav>
-        <div class="contenidoHeader">
-            <img src="../imagenes/cotizado.png" alt="">
+        <div class="contenido">
+            <div class="headerGris gris">
+                <img src="../imagenes/cotizado.png" alt="">
+            </div>
         </div>
-        <div class="contenidoHeader">
-            <img src="../imagenes/botonesCuotas.png" alt="">
+        <div class="contenido">
+            <div class="headerBlanco ">
+                <img src="../imagenes/botonesCuotas.png" alt="">
+            </div>
         </div>
-
     </header>
-    <div class="blureado">
-        <img src="../imagenes/blureado.png" alt="">
+    <div class="contenido gris">
+        <div class="contenedorImagen">
+            <img src="../imagenes/blureado.png" alt="">
+        </div>
     </div>
-    <div class="garantia">
-        <img src="../imagenes/textoGarantia.png" alt="">
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/textoGarantia.png" alt="">
+        </div>
     </div>
+    <div class="contenido ">
+        <div class="left">
+            <img src="../imagenes/formLeft.png">
+        </div>
+        <div class="rigth">
+            <img src="../imagenes/formRitgh.png">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/ilustracionConfirma.png">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/rating.png">
+        </div>
+    </div>
+    <div class="contenido reseña">
+        <div class="contenedorImagen">
+            <img src="../imagenes/reseña.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/reseña.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/reseña.png">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/ver.png">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/ilustraciónPreguntas.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/preguntas.png">
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="contenedorImagen">
+            <img src="../imagenes/tituloRecomienda.png">
+        </div>
+    </div>
+    <div class="contenido recomienda">
+        <div class="contenedorImagen">
+            <img src="../imagenes/listRecomienda.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/listRecomienda.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/listRecomienda.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/listRecomienda.png">
+        </div>
+    </div>
+    <div class="contenido azul">
+        <div class="contenedorImagen">
+            <img src="../imagenes/leftFooter.png">
+        </div>
+        <div class="contenedorImagen">
+            <img src="../imagenes/rigthFooter.png">
+        </div>
+    </div>
+
 </body>
 
 </html>
